# Transformer-DyNet

./: CMakeLists.txt  LICENSE.md  README.md
benchmarks/: README.md
benchmarks/abs/: rouge.full_length.test2_duc2004  rouge.limited_length_75.test2ksamples  scripts-transformer-agiga.sh  summary-beam5.test2_duc2004.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ffrelu_jbpe40K  summary-beam5.test2_duc2004.transformer.h4_l4_u512_do010101010001_att1_ls01_pe2_ffrelu  summary-beam5.test2_duc2004.transformer.h4_l4_u512_do010101010001_att1_ls01_pe2_ffrelu_jbpe40K  summary-beam5.test2ksamples_agiga.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ffrelu  summary-beam5.test2ksamples_agiga.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ffrelu_jbpe40K  summary-beam5.test2ksamples_agiga.transformer.h4_l4_u512_do010101010001_att1_ls01_pe2_ffrelu  summary-beam5.test2ksamples_agiga.transformer.h4_l4_u512_do010101010001_att1_ls01_pe2_ffrelu_jbpe40K
benchmarks/iwslt-envi/: eval-envi-iwslt-tensor2tensor.sh  scripts-transfomer-iwslt-envi.sh  train-envi-iwslt-tensor2tensor.sh  translation-beam5.test2013.en-vi.transformer.ensemble_2small_2medium  translation-beam5.test2013.en-vi.transformer.ensemble_2small_2medium.score-BLEU  translation-beam5.test2013.en-vi.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ml150_ffrelu  translation-beam5.test2013.en-vi.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ml150_ffrelu.score-BLEU  translation-beam5.test2013.en-vi.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ml150_ffrelu_run2  translation-beam5.test2013.en-vi.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ml150_ffrelu_run2.score-BLEU  translation-beam5.test2013.en-vi.transformer.h2_l2_u128_do010101010001_att1_ls01_pe2_ml150_ffrelu_run3  (+13 more)
dynet/: CMakeLists.txt  README.md
dynet/dynet/: dglstm.h  (+10 more)
sample-data/: README.txt  train.10k.en  train.10k.vi  vocab.en  vocab.vi
scripts/: wrap-data.py
src/: CMakeLists.txt  batch-utils.h  data-utils.h  def.h  dict-utils.h  ensemble-decoder.h  expr-xtra.h  layers.h  mask-utils.h  mask.h  math-utils.h  str-utils.h  transformer-decode.cc  transformer-lm.cc  transformer-lm.h  transformer-train.cc  transformer.cc  transformer.h
src/research/: CMakeLists.txt  e2e-round-tripping.cc  ensemble-decoder-side.h  mm-features.h  round-tripping.cc  transformer-decode-side.cc  transformer-side.h  transformer-train-mm-uda.cc  transformer-train-mm.cc  transformer-train-side.cc
(+61 files in other folders)
